# moob

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: config.hpp  draw_struct.hpp  enum.hpp  logger.hpp  loging.hpp  pos_struct.hpp  sigleton.hpp  utils.hpp
frame/: CMakeLists.txt
frame/base/: CMakeLists.txt  base.h  base_app.cpp  base_app.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  combo.cpp  combo.hpp  engine.cpp  engine.hpp  pixel.cpp  pixel.hpp  sprite.cpp  sprite.hpp
frame/interface/: app_interface.hpp  data_interface.hpp  mgr_interface.hpp  render_interface.hpp
frame/mgr/: CMakeLists.txt  base_mgr.cpp  base_mgr.hpp  combo_mgr.cpp  combo_mgr.hpp  pipe_mgr.cpp  pipe_mgr.hpp  pixel_mgr.cpp  pixel_mgr.hpp  thread_mgr.cpp  thread_mgr.hpp
frame/util/: CMakeLists.txt  pipe.cpp  pipe.hpp
game/: CMakeLists.txt  main.cpp
plat/: CMakeLists.txt  plat_app.h.in  plat_app.hpp
plat/apple/: apple_base.hpp
plat/linux/: CMakeLists.txt  linux_base.cpp  linux_base.hpp
plat/windows/: CMakeLists.txt  d2d_app.cpp  d2d_app.hpp  d2d_mgr.cpp  d2d_mgr.hpp  gl_app.cpp  gl_app.hpp  win_base.cpp  win_base.hpp
render_api/: CMakeLists.txt  d2d_api.hpp
renderer/: CMakeLists.txt  d2d_api.cpp  d2d_api.hpp
third/: CMakeLists.txt
third/windows/: CMakeLists.txt
third/windows/include/: glad.c  glad.h
third/windows/include/glad/: glad.h
third/windows/lib/: CMakeLists.txt  glfw3.lib
