#windows
#set(WIN_GRAPHICS_LIB_BASE moob::WinApp)
set(WIN_GRAPHICS_LIB_D2D D2dApp)
#set(WIN_GRAPHICS_LIB_OPENGL moob::GlApp)

#set(LINUX_GRAPHICS_LIB_BASE moob::LinuxApp)
set(LINUX_GRAPHICS_LIB_OPENGL GlApp)

if(WIN32)
    add_subdirectory(windows)
    if(WIN_GRAPHICS_LIB_BASE)
        set(PLAT_INCLUDE_NAME windows/win_base.hpp)
        set(GRAPHICS_CLASS ${WIN_GRAPHICS_LIB_BASE})
    elseif(WIN_GRAPHICS_LIB_D2D)
        set(PLAT_INCLUDE_NAME windows/d2d_app.hpp)
        set(GRAPHICS_CLASS ${WIN_GRAPHICS_LIB_D2D})
    elseif(WIN_GRAPHICS_LIB_OPENGL)
        set(PLAT_INCLUDE_NAME windows/gl_app.hpp)
        set(GRAPHICS_CLASS ${WIN_GRAPHICS_LIB_OPENGL})
    endif()
elseif(UNIX)
    if(APPLE)
        add_subdirectory(apple)
    elseif(BSD)
        add_subdirectory(linux)
    else()
        add_subdirectory(linux)
        if(LINUX_GRAPHICS_LIB_BASE)
            set(PLAT_INCLUDE_NAME linux/linux_base.hpp)
            set(GRAPHICS_CLASS ${LINUX_GRAPHICS_LIB_BASE})
        elseif(LINUX_GRAPHICS_LIB_OPENGL)
            set(PLAT_INCLUDE_NAME linux/gl_app.hpp)
            set(GRAPHICS_CLASS ${LINUX_GRAPHICS_LIB_OPENGL})
        endif()
    endif(APPLE)
else()
    add_subdirectory(empty)
endif(WIN32)

configure_file(
    "${PROJECT_SOURCE_DIR}/plat/plat_app.h.in"
    "${PROJECT_SOURCE_DIR}/plat/plat_app.hpp")